TextFields for price range filter in search_screen.fxml added with no styling or validation